# mebot

./: .coveragerc  .env_example  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .ruff.toml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  deadwood-mebot.service  mebot.service  noxfile.py  pyproject.toml  releaserc.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  settings.toml  settings.yml  setup.cfg  setup.py  tox.ini
.devcontainer/: .env  devcontainer.json  docker-compose.yaml
.github/workflows/: deploy.yml  develop.yml  on_build_deb.yml  on_deploy.yml  on_develop.yaml  on_develop.yml  on_release.yaml  on_release_pypi_publish.yml  release.yml
app/: __init__.py  bot.py  models.py
app/config/: settings.py  shared.py
app/plugins/public/: me_command.py  on_flood_handler.py  on_group_message_handler.py  on_join_handler.py  on_left_handler.py
app/utils/: custom_filters.py  utils.py
mebot/: __init__.py  __main__.py  bot.py  models.py
mebot/config/: settings.py
mebot/plugins/public/: me_command.py  on_flood_handler.py  on_group_message_handler.py  on_join_handler.py  on_left_handler.py
mebot/utils/: utils.py
migrations/app/: 0_init.py
migrations/mebot/: 0_init.py
src/app/adapters/db/: __init__.py  models.py
src/app/adapters/db/migrations/mebot/: 0_20251029161902_init.py  0_init.py
src/app/bot/: bot.py
src/app/bot/plugins/public/: me_command.py  on_flood_handler.py  on_group_message_handler.py  on_join_handler.py  on_left_handler.py
src/app/bot/utils/: utils.py
src/app/cli/: commands.py
src/app/client/: bot.py
src/app/client/decorators/: __init__.py  command.py
src/app/client/handlers/: __init__.py  me_command.py  on_join_handler.py  on_left_jandler.py  on_message_handler.py
src/app/client/plugins/public/: me_command.py  on_flood_handler.py  on_group_message_handler.py  on_join_handler.py  on_left_handler.py
src/app/client/utils/: utils.py
src/app/core/: logging.py
src/app/core/config/: __init__.py  settings.py
tests/: requirements.txt
