[project]
name = "mebot"
description = "Implementation of the /me command for Telegram chats like in IRC."
keywords = ["/me","telegram","irc"]
dynamic = [ "version" ]
authors = [
    { name = "Katulos", email = "123748719+Katulos@users.noreply.github.com" }
]
maintainers = [
    { name = "Katulos", email = "123748719+Katulos@users.noreply.github.com"}
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Software Development :: User Interfaces"
]
requires-python = ">= 3.10"
dependencies = [
    "aerich>=0.9.2",
    "click>=8.3.0",
    "dynaconf>=3.2.12",
    "orjson>=3.11.4",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "tgcrypto>=1.2.5",
    "tomli>=2.3.0",
    "tortoise-orm>=0.25.1",
]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[project.scripts]
mebot = "app.cli.commands:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app= ['locales/*', 'data/*']

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
