[metadata]
name = mebot
description = Implementation of the /me command for Telegram chats like in IRC.
long_description = file: README.md
long_description_content_type = text/markdown
author = Katulos
author_email = katulos@protonmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Software Development :: User Interfaces
home_page = https://github.com/Katulos/deadwood-mebot
keywords = /me telegram irc
platform = any

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =.
setup_requires =
    setuptools>=46
    setuptools-git-versioning
test_suite = tests
zip_safe = false

[options.packages.find]
where = .

[options.package_data]
mebot =
    data/.gitkeep
    migrations/*
    migrations/**/*

[options.exclude_package_data]
mebot =
    data/*

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
